--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mysql-server",
+  "name": "app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/mysql-server",
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
